# Articulate-Manual

./: .gitignore  README.md  SPEC.md  pyproject.toml
articulate_core/: exceptions.py
articulate_core/cli/: console.py  main.py
articulate_core/cli/commands/: codegen.py  deploy.py  init.py  (+3 more)
articulate_core/config/: settings.py
articulate_core/llm/: __init__.py  client.py
articulate_core/pipeline/: codegen_engine.py  deployment_manager.py  models.py  orchestrator.py  stage1_requirement.py  stage2_approach.py  stage3_generation.py  stage4_simulation.py  stage5_deployment.py  state.py
articulate_core/reporting/: __init__.py  html_reporter.py  markdown_reporter.py
articulate_core/simulation/: __init__.py  launch_mujoco.py  metrics.py  validation_engine.py
articulate_core/skill/: __init__.py  decision_router.py  prompt_manager.py  router_rules.yaml
docs/: Articulate_Manual.html  manual.md
tests/: test_config.py  test_llm_client.py  test_pipeline_models.py
tests/e2e/: test_real_llm.py
tests/fixtures/: code_generation.json  failure_analysis.json  recorded_llm.py  requirement_analysis.json  risk_assessment.json  route_response.json  subtask_decomposition.json  technical_design.json
tests/integration/: test_pipeline_stages.py
tests/unit/: test_converters.py  test_deployment_manager.py  test_mujoco_simulator.py  test_simulation_metrics.py  test_simulation_stage.py  test_validation_engine.py  test_with_recorded_llm.py
实现机械臂从一个位置抓取物品到另一个位置/assets/: arm.mjcf  arm.urdf
实现机械臂从一个位置抓取物品到另一个位置/deploy/: validation_report.html  validation_report.md
实现机械臂从一个位置抓取物品到另一个位置/ros_ws/src/arm_controller/: package.xml  setup.py
实现机械臂从一个位置抓取物品到另一个位置/ros_ws/src/arm_controller/arm_controller/: arm_controller_node.py  arm_kinematics.py  trajectory_planner.py
实现机械臂从一个位置抓取物品到另一个位置/ros_ws/src/arm_controller/config/: controllers.yaml  kinematics.yaml
实现机械臂从一个位置抓取物品到另一个位置/ros_ws/src/arm_controller/launch/: arm_controller_bringup.launch.py
(+29 files in other folders)
